--- a/huddleupui/public/index.html
+++ b/huddleupui/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Huddleup Web Application"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -39,5 +39,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <script>
+        if('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+            navigator.serviceWorker.register('./serviceWorker.js').then((reg) => {
+              console.log("Worker registered");
+            }).catch((err) => {
+                console.log("Service Worker Error: " + err);
+            })
+          })
+        } else {
+          console.log("Service Worker is not supported");
+        }
+      </script>
   </body>
 </html>
